# background-agent-test

./: .cursorrules  .gitignore  .openhands_instructions  README.md  docker-compose.yml
.github/workflows/: ai-code-generator.yml  issue-pipeline.yml  openhands-resolver.yml  plan.yml  simple-resolver.yml  validate.yml
agents/orchestrator/: mock_planner.py  planner.py  pyproject.toml  validator_summary.py
database/: init.sql
docs/ai/: feature-template.md  simple-test-feature.md  test-feature.md
docs/features/: authentication.md  landing-page.md  navbar.md
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
frontend/e2e/: auth-flow.spec.ts  navigation-auth-state.spec.ts
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.routes.ts  app.ts
scripts/: hello_openhands.py
src/: GarageInventory.sln
src/GarageInventory.API/: Dockerfile  GarageInventory.API.csproj  GarageInventory.API.http
src/GarageInventory.API/Properties/: launchSettings.json
src/GarageInventory.Application/: GarageInventory.Application.csproj
src/GarageInventory.Application/DTOs/: LocationDto.cs  UserDto.cs
src/GarageInventory.Application/Interfaces/: IAuthService.cs  IUserService.cs
src/GarageInventory.Application/Services/: AuthService.cs
src/GarageInventory.Domain/Entities/: BaseEntity.cs  Category.cs  InventoryItem.cs  ItemImage.cs  ItemMovement.cs  Location.cs  User.cs
src/GarageInventory.Infrastructure/: GarageInventory.Infrastructure.csproj
src/GarageInventory.Tests/: GarageInventory.Tests.csproj  UnitTest1.cs
(+33 files in other folders)
