[project]
name = "garage-ai-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.36",
  "langchain-openai>=0.2.0",   # or langchain-anthropic if you prefer
  "pydantic>=2.6.0",
  "typer>=0.12.3",
]

[project.scripts]
plan = "planner:app"
validate_summary = "validator_summary:app"

[tool.setuptools]
py-modules = ["planner", "validator_summary"]
